# flyappy_autonomy_test_public

./: .clang-format  .format-all.sh  .gitignore  Dockerfile  README.md
.github/: CODEOWNERS
flyappy_autonomy_code/: CMakeLists.txt  package.xml
flyappy_autonomy_code/include/flyappy_autonomy_code/: flyappy.hpp  flyappy_ros.hpp
flyappy_autonomy_code/launch/: flyappy_autonomy_code_cpp.launch  flyappy_autonomy_code_py.launch
flyappy_autonomy_code/scripts/: flyappy_autonomy_code_node.py
flyappy_autonomy_code/src/: flyappy.cpp  flyappy_autonomy_code_node.cpp  flyappy_ros.cpp
flyappy_autonomy_code/tests/: CMakeLists.txt  test_my_feature.cpp
flyappy_autonomy_code_cpp/: .clang-format  .format-all.sh  CMakeLists.txt  CMakePresets.json
flyappy_autonomy_code_cpp/src/flyappy/: flyappy.cpp  flyappy.hpp  flyappy_autonomy_code_node.cpp  flyappy_ros.cpp  flyappy_ros.hpp
flyappy_autonomy_code_cpp/tests/: CMakeLists.txt  test_my_feature.cpp
flyappy_autonomy_code_py/: pyproject.toml
flyappy_autonomy_code_py/src/flyappy_autonomy_code/: flyappy_autonomy_code_node.py  flyappy_ros.py
flyappy_autonomy_code_py/tests/: test_my_feature.py
flyappy_main_game/: CMakeLists.txt  package.xml  pyproject.toml
flyappy_main_game/scripts/: flyappy.py  laser.py
flyappy_main_game/src/flyappy_main_game/: flyappy.py  laser.py
