<?xml version="1.0"?>
<package format="2">
  <name>flyappy_autonomy_code</name>
  <version>0.0.0</version>
  <description>The flyappy_autonomy_code package</description>
  <maintainer email="auto_team@flyability.com">Flyability SA</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
